Fix horizontal scrolling issue on mobile devices

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -98,7 +98,10 @@ body {
 .gradient-border {
   position: relative;
 }
-
+html,
+body {
+  overflow-x: hidden;
+}
 .gradient-border::before {
   content: "";
   position: absolute;
